--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.0",
-    "logger": "^0.0.1",
     "remote-redux-devtools": "^0.5.16"
   }
 }
